<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login"
        android:textFontWeight="700"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/logocard"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:textColor="@color/appColor"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_back_"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logocard" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head" />

    <androidx.cardview.widget.CardView
        android:id="@+id/emailCard"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="1dp"
        app:layout_constraintTop_toBottomOf="@+id/desc">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingHorizontal="12sp"
            android:singleLine="true"
            android:textColorHint="@color/textHint"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/passCard"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="1dp"
        app:layout_constraintTop_toBottomOf="@+id/emailCard">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingHorizontal="12sp"
            android:singleLine="true"
            android:textColorHint="@color/textHint"
            android:textSize="12sp" />


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_round_fill"
        android:text="@string/login"
        android:textStyle="bold"
        android:theme="@style/buttonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passCard" />


</androidx.constraintlayout.widget.ConstraintLayout>