<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".BookActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:padding="2dp"
            android:src="@drawable/ic_arrow_back_black" />

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book_details"
            android:textFontWeight="700"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loader_test" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Book Name"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Author: Name"
                android:textSize="15sp"
                android:textFontWeight="700"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/publicationYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Publishing Year: 0000"
                android:textSize="15sp"
                android:textFontWeight="700"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textFontWeight="700"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/descTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="This is some info"
                android:textSize="13sp"
                android:textFontWeight="700"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mark_as_read"
                android:textColorHint="@color/appColor"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>